
  * (Something about more specific parser bundles, plus an overall one)

  MINOR CHANGES

    * Upgrade rome to 1.5.1 (TIKA-1820)

    * The default LoadErrorHandler is now WARN, to alert you to missing
      parser classes and their dependencies. To keep the old behaviour,
      set your LoadErrorHandler to IGNORE. (TIKA-1805)

Release 1.15 -???

  * Mime magic for the OneNote family (.one / .onetoc / .onepkg), no parser
    (TIKA-2224).

  * Add parsers for WordPerfect and QuattroPro (.qpw) files.
    Contributed by Pascal Essiembre (TIKA-1946).

  * Add configurability of "preserve-interword-spacing" to
    TesseractOCRParser (TIKA-2190).

  * Allow extraction of PDActions (including Javascript) from
    PDFs (TIKA-2090).

  * Change default behavior in experimental .docx parser to ignore
    deleted text to align with .doc (TIKA-2187).

  * Added experimental SAX parser for .docx files. To select this parser,
    set useSAXDocxExtractor(true) on OfficeParserConfig (TIKA-1321).

  * Change default behavior to parse embedded documents even if the user
    forgets to specify a Parser.class in the ParseContext (TIKA-2096).
    Users who wish to parse only the container document should set
    an EmptyParser as the Parser.class in the ParseContext.

  * Add mime detection and parser for Word 2006ML format (TIKA-2179).

  * Upgrade to POI 3.16-beta1 (TIKA-2116).

  * Allow configuration of timeout for ForkParser (TIKA-2170).

  * Add extraction of .jpx inline images from PDFs (TIKA-2175).

  * Add .jpx, .jp2, .ppm to formats handled by Tesseract (TIKA-2174).

  * Upgrade provided SQLite parser to 3.15.1 (TIKA-2171).

Release 1.14 - 11/9/2016

  * Extract all headers from MSG/RFC822 (TIKA-2122).

  * Upgrade metadata extractor to 2.9.1 (TIKA-2113).

  * Extract PDF DocInfo metadata into separate keys to prevent
    overwriting by XMP metadata (TIKA-2057).

  * Re-enable fileUrl for tika-server (TIKA-2081).  If you choose,