@@ -5113,7 +5113,20 @@
     <glob pattern="*.ft11"/>
     <glob pattern="*.ft12"/>
   </mime-type>
-
+  <mime-type type="image/x-jbig2">
+    <alias type="image/x-jb2"/>
+    <acronym>JBIG2</acronym>
+    <_comment>
+      A lossless image compression standard from the
+      Joint Bi-level Image Experts Group.
+    </_comment>
+    <tika:link>http://www.itu.int/rec/T-REC-T.88/en</tika:link>
+    <magic priority="50">
+      <match value="0x974A42320D0A1A0A" type="string" offset="0"/>
+    </magic>
+    <glob pattern="*.jb2"/>
+    <glob pattern="*.jbig2"/>
+  </mime-type>
   <mime-type type="image/x-jp2-codestream">
     <_comment>JPEG 2000 Codestream</_comment>
     <magic priority="25">
