@@ -211,7 +211,21 @@ class PDF2XHTML extends AbstractPDF2XHTML {
                     extension = "tif";
                 } else if (extension.equals("jpx")) {
                     embeddedMetadata.set(Metadata.CONTENT_TYPE, "image/jp2");
-                } else {
+                }
+
+                // PDFBox does not yet return JBIG2 extension and extracting
+                // inline JBIG2 images fails with test file testPDF_JBIG2.pdf
+                // if we explicitely set the content type to image/x-jbig2
+                // (no "pages" are found when image is embedded).
+                // It works when it thinks it is PNG so we do not force it to
+                // jb2 for parsing until this issue is addressed in PDFBox and
+                // Levigo jbig2-imageio.  Will result in bad content-type in
+                // metadata for now, but that's better than not being able to
+                // handle JBIG2 in PDFs at all.
+                //                } else if (extension.equals("jb2")) {
+                //                    embeddedMetadata.set(
+                //                            Metadata.CONTENT_TYPE, "image/x-jbig2");
+                else {
                     //TODO: determine if we need to add more image types
                     //throw new RuntimeException("EXTEN:" + extension);
                 }
